samples/_failures_safe/1761432917_e00e9d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_52402fa4.c: In function ‘get_user_event’:
./samples/SAFE/__tmp_52402fa4.c:168:12: error: missing terminating " character
  168 |     printf("Enter event (0=START, 1=DATA, 2=PROCESS,
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_52402fa4.c:168:5: error: expected expression at end of input
  168 |     printf("Enter event (0=START, 1=DATA, 2=PROCESS,
      |     ^~~~~~
./samples/SAFE/__tmp_52402fa4.c:168:5: error: expected declaration or statement at end of input
